Fixed Main Page CSS by wrapping Items in new classes to Space Divs Evenly as page scales larger or smaller.

--- a/components/NavBar.css
+++ b/components/NavBar.css
@@ -1,17 +1,23 @@
 .NavBar {
   z-index: 2;
-  display: inline-flex;
+  display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between; /* Ensures spacing between each third */
   width: 100%;
   height: 55px;
   background-color: #9d9084;
 }
 
+.NavBar-item {
+  flex: 1; /* Each item takes up an equal third */
+  display: flex; /* Center-align content within each item */
+  align-items: center;
+  justify-content: center;
+}
+
+
 .Logo-box {
   width: fit-content;
-  padding-left: 1em;
-  padding-right: 1em;
 }
 
 /* .NavBar-logo for the stripe purchase page */
@@ -38,8 +44,6 @@
   line-height: 22px;
   font-size: 19px;
   width: fit-content;
-  padding-left: 2.5em;
-  padding-right: 2.5em;
   color: #2b2b2b;
 }
 
